# GraphEditor

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  GraphEditor.pro  README.md  resources.qrc
App/: CMakeLists.txt
App/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
DATA/: common.qrc
DATA/desktop/: GraphEditor.desktop
DATA/etc/: .clang-format  Doxyfile
DATA/scripts/: prepareToRelease.sh
DATA/styles/: docstyles.css  mainstyles.qss
DATA/testing/: oldsave.gse
Deploy/: buildProjectInstall.sh  createAppImage.sh  createWindowsExecutable.sh
Libraries/: CMakeLists.txt
Libraries/Common/: CMakeLists.txt
Libraries/Common/include/Common/: ApplicationSettings.h  CommonFunctions.h  Encryption.h
Libraries/Common/src/: applicationsettings.cpp  applicationsettings.h  applicationsettingshelper.cpp  applicationsettingshelper.h  commonfunctions.cpp  commonfunctions.h  encryption.cpp  encryption.h  logging.h
Libraries/Common/tests/: appsettings_helper_test.cpp  appsettings_test.cpp  encrypt_test.cpp
Libraries/CustomWidgets/: CMakeLists.txt
Libraries/CustomWidgets/include/CustomWidgets/: ButtonMatrix.h  ButtonToolbar.h  PasswordInsertDialog.h
Libraries/CustomWidgets/src/: buttonmatrix.cpp  buttonmatrix.h  buttontoolbar.cpp  buttontoolbar.h  passwordinsertdialog.cpp  passwordinsertdialog.h  passwordinsertdialog.ui
Libraries/EditorForm/: CMakeLists.txt
Libraries/EditorForm/include/EditorForm/: EditMode.h  EditorForm.h  ModeBase.h  PropertyEditForm.h  SceneBase.h  TabWidget.h  ToolBar.h  ViewMode.h
Libraries/EditorForm/src/: graphcommonpropertiesmodel.cpp  graphcommonpropertiesmodel.h  graphcustompropertiesmodel.cpp  graphcustompropertiesmodel.h  grapheditmode.cpp  grapheditmode.h  grapheditorform.cpp  grapheditorform.h  grapheditorform.ui  grapheditorsettingsform.cpp  grapheditorsettingsform.h  grapheditorsettingsform.ui  grapheditview.cpp  grapheditview.h  graphfilestoolbar.cpp  graphfilestoolbar.h  graphmodebase.cpp  graphmodebase.h  graphoptionstoolbar.cpp  graphoptionstoolbar.h  graphpropertyeditform.cpp  graphpropertyeditform.h  graphpropertyeditform.ui  graphscenebase.cpp  graphscenebase.h  graphsceneview.cpp  graphsceneview.h  graphtabwidget.cpp  graphtabwidget.h  graphtabwidget.ui  graphtoolbar.cpp  graphtoolbar.h  graphviewmode.cpp  graphviewmode.h
Libraries/EditorForm/src/GraphEdit/: grapheditorform.cpp  grapheditorform.h  grapheditorform.ui  graphpropertyeditform.cpp  graphpropertyeditform.h  graphtabwidget.cpp  graphtabwidget.h  graphtabwidget.ui  graphtoolbar.cpp  graphtoolbar.h  objectpropertyeditorform.cpp  objectpropertyeditorform.h  objectpropertyeditorform.ui  propertyedititem.h
Libraries/Filework/: CMakeLists.txt
Libraries/Filework/include/Filework/: SaveMaster.h
Libraries/Filework/src/: abstractsaveformat.cpp  abstractsaveformat.h  encryptedsaveformat.cpp  encryptedsaveformat.h  formatfactory.cpp  formatfactory.h  gse_format.cpp  gse_format.h  gsej_format.cpp  gsej_format.h  gseje_format.cpp  gseje_format.h  gsj_format.cpp  gsj_format.h  gsje_format.cpp  gsje_format.h  savemaster.cpp  savemaster.h
Libraries/Filework/tests/: gse_test.cpp  gsej_test.cpp  gseje_test.cpp  gsj_test.cpp  save_load_test.cpp
Libraries/GraphObject/: CMakeLists.txt
Libraries/GraphObject/include/GraphObject/: Common.h  Components.h  ExtendedObject.h  Maintainer.h  Object.h  TestGenerators.h
Libraries/GraphObject/src/: gconnection.h  graphcommon.cpp  graphcommon.h  graphextendedobject.cpp  graphextendedobject.h  graphmaintaner.cpp  graphmaintaner.h  graphobject.cpp  graphobject.h  gvertex.cpp  gvertex.h  testgenerators.cpp  testgenerators.h
Libraries/GraphObject/tests/: graph_object_test.cpp
Libraries/GraphScene/: CMakeLists.txt
Libraries/GraphScene/include/GraphScene/: ConnectionLineItem.h  EditView.h  ObjectPropertyEditorForm.h  VertexObjectItem.h
Libraries/GraphScene/src/: grapheditmode.cpp  grapheditmode.h  grapheditview.cpp  grapheditview.h  graphmodebase.cpp  graphmodebase.h  graphsceneview.cpp  graphsceneview.h  graphviewmode.cpp  graphviewmode.h
Libraries/GraphScene/src/Items/: connectionlineitem.cpp  connectionlineitem.h  objectpropertyeditorform.cpp  objectpropertyeditorform.h  objectpropertyeditorform.ui  propertyedititem.cpp  propertyedititem.h  vertexobjectitem.cpp  vertexobjectitem.h
Libraries/ObjectItems/: CMakeLists.txt
Libraries/ObjectItems/include/ObjectItems/: ArrowLineItem.h  CenterItem.h  ConnectionLineItem.h  Constants.h  ItemBase.h  LabelItem.h  SceneFieltItem.h  VertexObjectItem.h
Libraries/ObjectItems/src/: arrowline.cpp  arrowline.h  centeritem.cpp  centeritem.h  constants.h  itembase.cpp  itembase.h  labelitem.cpp  labelitem.h  scenefielditem.cpp  scenefielditem.h  scenemarkeritem.cpp  scenemarkeritem.h  vertexconnectionline.cpp  vertexconnectionline.h  vertexobject.cpp
Libraries/ObjectItems/tests/: scenefield_test.cpp
Libraries/ObjectScene/: CMakeLists.txt
Libraries/ObjectScene/include/ObjectScene/: ObjectView.h  SceneItems.h
Libraries/ObjectScene/src/: constants.h  informationobjectview.cpp  informationobjectview.h  interactiveobjectview.cpp  interactiveobjectview.h  objectsinternalscene.cpp  objectsinternalscene.h  objectview.cpp  objectview.h  objectviewbase.cpp  objectviewbase.h  sceneitems.h
Libraries/ObjectScene/src/ObjectViewItems/: arrowline.cpp  dynamicareaitem.cpp  dynamicareaitem.h  itembase.cpp  itembase.h  labelitem.cpp  labelitem.h  scenefielditem.cpp  scenefielditem.h  vertexconnectionline.cpp  vertexconnectionline.h  vertexobject.cpp  vertexobject.h
Libraries/ObjectScene/src/Scenes/: informationobjectview.cpp  informationobjectview.h  interactiveobjectview.cpp  interactiveobjectview.h  objectsinternalscene.cpp  objectview.cpp  objectview.h  objectviewbase.h
Notes/: styles_tmp.txt
Testing/: CMakeLists.txt  graph_object_test.cpp
cmake/: CMakeLists.txt  toolchain-mxe.cmake
src/: logging.h  main.cpp  src.pri
src/Filework/: datareadmanager.cpp  datareadmanager.h  datawritemanager.cpp  datawritemanager.h  filemetaworker.cpp  filemetaworker.h  savemaster.cpp
(+101 files in other folders)
