# Project files
file(GLOB HEADERS "src/*.hpp" "src/*.h")
file(GLOB SOURCES "src/*.cpp")
file(GLOB UIFILES "src/*.ui")
set(
    PROJECT_FILES
    ${HEADERS} ${SOURCES} ${UIFILES} ${RESOURCES_COMMONFILE}
)

set(
    PROJECT_LINK_LIBS
    Qt${QT_VERSION_MAJOR}::Core
    Qt${QT_VERSION_MAJOR}::Widgets
    Qt${QT_VERSION_MAJOR}::Gui
)

# Main target
add_executable( ${PROJECT_NAME} )
target_sources(${PROJECT_NAME} PRIVATE ${PROJECT_FILES})
target_link_libraries( ${PROJECT_NAME} PRIVATE ${PROJECT_LINK_LIBS} )
LINK_TARGET_LIBRARY(${PROJECT_NAME} Common)
LINK_TARGET_LIBRARY(${PROJECT_NAME} EditorForm)
CONFIGURE_SUFFIX(${PROJECT_NAME} ".bin.DEBUG" ".bin")
set_target_properties(
    ${PROJECT_NAME} PROPERTIES
    BUILD_WITH_INSTALL_RPATH TRUE
    INSTALL_RPATH_USE_LINK_PATH TRUE
    INSTALL_RPATH "./lib;../lib"
)

add_executable( ${INSTALL_BINARY_NAME} )
target_sources(${INSTALL_BINARY_NAME} PRIVATE ${PROJECT_FILES})
target_link_libraries( ${INSTALL_BINARY_NAME} PRIVATE ${PROJECT_LINK_LIBS} )
LINK_TARGET_LIBRARY(${INSTALL_BINARY_NAME} Common)
LINK_TARGET_LIBRARY(${INSTALL_BINARY_NAME} EditorForm)
target_compile_definitions(${INSTALL_BINARY_NAME} PRIVATE NDEBUG)
target_compile_options(${INSTALL_BINARY_NAME} PRIVATE -O3)
set_target_properties(${INSTALL_BINARY_NAME} PROPERTIES SUFFIX ".bin")
set_target_properties(
    ${INSTALL_BINARY_NAME} PROPERTIES
    BUILD_WITH_INSTALL_RPATH TRUE
    INSTALL_RPATH_USE_LINK_PATH TRUE
    INSTALL_RPATH "./lib;../lib"
)

# ======================================== #
# Installation
install(TARGETS ${INSTALL_BINARY_NAME}
    RUNTIME     DESTINATION ${INSTALL_DESTINATION_PREFIX}
    LIBRARY     DESTINATION ${INSTALL_DESTINATION_PREFIX}/lib
    ARCHIVE     DESTINATION ${INSTALL_DESTINATION_PREFIX}/lib/static
    INCLUDES    DESTINATION ${INSTALL_DESTINATION_PREFIX}/include
)

set(
    GRAPH_EDITOR_DISABLE_EXECUTABLE ON
)

# Packet creation
include(InstallRequiredSystemLibraries)

set(
    GRAPH_EDITOR_INSTALL_APPIMAGE ON
)
set(CPACK_PACKAGE_NAME ${INSTALL_BINARY_NAME})
set(CPACK_PACKAGE_VERSION ${GRAPH_EDITOR_VERSION})

if (GRAPH_EDITOR_INSTALL_APPIMAGE)
    set(CPACK_GENERATOR "External")
    set(CPACK_EXTERNAL_ENABLED TRUE)
    set(CPACK_EXTERNAL_BUILT_PACKAGES "AppImage")
    set(CPACK_TOPLEVEL_TAG "AppImage")
    include(CPack)
else()
    set(CPACK_GENERATOR "DEB")
    set(CPACK_DEBIAN_PACKAGE_MAINTAINER "VinTRiZz")
    set(CPACK_PACKAGE_DIRECTORY ${INSTALL_DESTINATION_PREFIX})
    include(CPack)
endif()
